--- a/package.json
+++ b/package.json
@@ -5,13 +5,23 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "fuse.js": "^7.0.0"
+    "express": "^4.19.2",
+    "fuse.js": "^7.0.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.10.1",
+    "node-cache": "^5.1.2",
+    "nodemon": "^3.1.4",
+    "sequelize": "^6.37.3"
   }
 }
